1_installation/gke/2_gke_singleport/2_ingress_bolt.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bolt-server
  namespace: application
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - bolt.server
    secretName: bolt-server-tls
  rules:
    - host: bolt.server
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-neo4j-release
                port:
                  number: 7687
